--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ TEXT COLOR: #343a40
 /* GENERAL STYLES */
 /* ------------------------ */
 body {
-  font-family: "Poppins", sans-serif;
+  font-family: 'Poppins', sans-serif;
   color: #343a40;
   border-bottom: 8px solid #1971c2;
 }
@@ -107,6 +107,10 @@ img {
 
 /* FEATURES */
 .features-icon {
+  stroke: #1971c2;
+  width: 32px;
+  height: 32px;
+  margin-bottom: 16px;
 }
 
 .features-title {
@@ -170,6 +174,9 @@ h3 {
 }
 
 .chair-icon {
+  stroke: #1971c2;
+  width: 24px;
+  height: 24px;
 }
 
 .chair-price {
